public/submission/Logs/$demo1/[1][18604224897][demo1][h][A].c.log
Compile Error
[1][18604224897][demo1][h][A].c:1:1: error: stray '\341' in program
 廕卡asdasdasd
 ^
[1][18604224897][demo1][h][A].c:1:2: error: stray '\272' in program
 廕卡asdasdasd
  ^
[1][18604224897][demo1][h][A].c:1:3: error: stray '\245' in program
 廕卡asdasdasd
   ^
[1][18604224897][demo1][h][A].c:1:1: error: expected '=', ',', ';', 'asm' or '__attribute__' at end of input
 廕卡asdasdasd
 ^
